--- a/FASTPAY_BASE/app/src/main/res/layout/activity_activation.xml
+++ b/FASTPAY_BASE/app/src/main/res/layout/activity_activation.xml
@@ -847,7 +847,7 @@
         android:id="@+id/activationPermissionPromptOverlay"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#80000000"
+        android:background="@drawable/overlay_glass_background"
         android:visibility="gone"
         android:clickable="true"
         android:focusable="true"
